# krystal-quorum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.superpowers/sdd/: task-10-report.md
benchmarks/: README.md  expected-findings.json  run_quorum_benchmark.py
benchmarks/fixtures/: missing-acceptance.md  missing-rollback.md
demo/: launch-posts.md
docs/: agent-import-packs.md  agent-integrations.md  demo.md  prompts.md  v0.4-experiment-report.md
docs/architecture/: consensus-matching.md  local-command-reviewers.md  plan-to-code-evidence.md
docs/specs/: 2026-06-19-krystal-quorum-v1-public-repo-spec.md
docs/superpowers/plans/: 2026-06-19-krystal-quorum-v1-public-repo.md  2026-06-23-consensus-matching-design.md  2026-06-23-consensus-matching-v2.md  2026-06-23-consensus-matching-v3.md  2026-06-23-consensus-matching-v4.md  2026-06-23-consensus-matching-v5.md
examples/: agent-plan.md  bad-plan.md  command-reviewer.py  command-reviewer.toml  good-plan.md
experiments/: __init__.py  v04_candidates.py
integrations/agent-templates/: local-command-reviewers.toml  ollama.toml  openai-compatible.toml
integrations/claude-code-skill/: quorum-review.md
integrations/github-action/: README.md  action.yml
integrations/hermes-skill/: SKILL.md
integrations/openclaw-skill/: SKILL.md
src/krystal_quorum/: __init__.py  approval.py  cli.py  commitments.py  config.py  diff_formatting.py  diff_models.py  diff_persist.py  diff_prompts.py  diff_reconcile.py  diff_service.py  diffing.py  diversity.py  formatting.py  hosted.py  init_command.py  issue_matching.py  models.py  persist.py  prompts.py  reconcile.py  reviewer_specs.py  sensitive_input.py
src/krystal_quorum/reviewers/: __init__.py  base.py  command.py  diff_base.py  mock.py  ollama.py  openai_compatible.py
src/krystal_quorum/templates/agent_integrations/claude-code/.claude/commands/: quorum-review.md
src/krystal_quorum/templates/agent_integrations/claude-code/.claude/skills/krystal-quorum-review/: SKILL.md
src/krystal_quorum/templates/agent_integrations/codex/.codex/skills/krystal-quorum-review/: SKILL.md
src/krystal_quorum/templates/agent_integrations/common/: quorum-review.md
src/krystal_quorum/templates/agent_integrations/copilot/.github/skills/krystal-quorum-review/: SKILL.md
src/krystal_quorum/templates/agent_integrations/opencode/.opencode/skills/: krystal-quorum-review.md
tests/: test_adapters.py  test_agent_workflow.py  test_approval.py  test_cli.py  test_command_reviewer.py  test_commitments.py  test_diff_adapters.py  test_diff_cli.py  test_diff_models.py  test_diff_persist.py  test_diff_prompts.py  test_diff_reconcile.py  test_diff_service.py  test_diffing.py  test_diversity.py  test_github_action.py  test_init_command.py  test_issue_matching.py  test_mock_review.py  test_models.py  test_persist.py  test_plan_to_diff_e2e.py  test_prompts.py  test_public_readiness.py  test_reconcile.py  test_reviewer_exports.py  test_reviewer_specs.py  test_sensitive_input.py  test_v04_experiments.py  test_version.py
(+2 files in other folders)
