[project]
name = "krystal-quorum"
version = "0.2.3"
description = "Preflight review for AI coding plans."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.scripts]
krystal-quorum = "krystal_quorum.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
